# SCuM-programmer

./: .gitignore  README.md  scum_programmer.py
.github/workflows/: pytest.yml  python-app.yml
01_software/: README.md  create_dummy_bin_file.py  requirements.txt  setup.cfg
01_software/scum-programmer/: scum-programmer.py
01_software/scumprogrammer/: FancyCli.py  InterfaceCli.py  InterfaceWeb.py  OpenHdlc.py  ScumConnector.py  ScumUtils.py  __init__.py  __main__.py  scumprogrammer.py
01_software/scumprogrammer/static/: nRF52840-DK.psd  scum.css  scum.js  scumprogrammer_ui.ai
01_software/scumprogrammer/views/: index.tpl
01_software/tests/unit/: test_hdlc.py
02_firmware_nRF52840-DK/: openhdlc.c  openhdlc.h  scum-programmer.c  scum-programmer.emProject
02_firmware_nRF52840-DK/nRF/Device/Include/: nrf51.h  nrf51422_peripherals.h  nrf51801_peripherals.h  nrf51802_peripherals.h  nrf51822_peripherals.h  nrf51_peripherals.h  nrf52810_to_nrf52811.h  nrf52811.h  nrf52811_bitfields.h  nrf52811_peripherals.h  nrf52833.h  nrf52833_peripherals.h  nrf52840_peripherals.h  nrf5340_application.h  nrf5340_application_peripherals.h  nrf5340_network.h  nrf5340_network_bitfields.h  nrf5340_network_peripherals.h  nrf9160_bitfields.h  nrf_peripherals.h  startup_config.h
scum-programmer/: Executable_1.emSession  flash_placement.xml  scum-programmer.c  scum-programmer.emProject  uicr_config.h
scum-programmer/nRF/Device/Include/: nrf51824_peripherals.h  nrf51_bitfields.h  nrf51_to_nrf52810.h  nrf51_to_nrf52840.h  nrf52805.h  nrf52805_bitfields.h  nrf52805_peripherals.h  nrf52810.h  nrf52810_bitfields.h  nrf52810_name_change.h  nrf52810_peripherals.h  nrf52832_peripherals.h  nrf52833_bitfields.h  nrf52840.h  nrf52840_bitfields.h  nrf5340_application_bitfields.h  nrf5340_application_name_change.h  nrf5340_network_name_change.h  nrf9160.h  nrf9160_name_change.h  nrf9160_peripherals.h
