[metadata]
name                              = scumprogrammer
version                           = 0.0.1
author                            = Thomas Watteyne
author_email                      = twatteyne@gmail.com
description                       = Program and interact with your SCuM chip
long_description                  = file: README.md
long_description_content_type     = text/markdown
url                               = https://github.com/openwsn-berkeley/SCuM-programmer/
project_urls                      =
    Bug Tracker                   = https://github.com/openwsn-berkeley/SCuM-programmer/issues
classifiers                       =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages                          = scumprogrammer
install_requires                  =
    pyserial
    blessed

[options.entry_points]
console_scripts                   =
    scumprogrammer                = scumprogrammer:scumprogrammer.main