[metadata]
name                              = scumprogrammer
version                           = attr: scumprogrammer.VERSION.VERSION
author                            = Thomas Watteyne
author_email                      = twatteyne@gmail.com
description                       = Program and interact with your SCuM chip
long_description                  = file: README.md
long_description_content_type     = text/markdown
url                               = http://www.crystalfree.org/
project_urls                      =
    Source Code                   = https://github.com/openwsn-berkeley/SCuM-programmer/
    Bug Tracker                   = https://github.com/openwsn-berkeley/SCuM-programmer/issues
classifiers                       =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages                          = scumprogrammer
install_requires                  =
    pyserial
    bottle

[options.package_data]
scumprogrammer                    = views/*.tpl, static/*

[options.entry_points]
console_scripts                   =
    scumprogrammer                = scumprogrammer:main_app
